--- a/src/app/fornecedor/novo/novo.component.html
+++ b/src/app/fornecedor/novo/novo.component.html
@@ -37,8 +37,8 @@
 
                 <div class="form-group">
                     <label class="control-label" for="TipoFornecedor">Tipo</label><br>
-                    <input type="radio" value="1" id="tipoFornecedor" formControlName="tipoFornecedor" name="tipoFornecedor"> Pessoa Física<br>
-                    <input type="radio" value="2" id="tipoFornecedor" formControlName="tipoFornecedor" name="tipoFornecedor"> Pessoa Jurídica
+                    <input type="radio" value=1 id="tipoFornecedor" formControlName="tipoFornecedor" name="tipoFornecedor"> Pessoa Física<br>
+                    <input type="radio" value=2 id="tipoFornecedor" formControlName="tipoFornecedor" name="tipoFornecedor"> Pessoa Jurídica
                 </div>
 
                 <div class="form-group form-check">
@@ -53,7 +53,7 @@
                     <div class="form-group">
                         <label class="control-label">CEP</label>
                         <div>
-                            <input class="form-control" id="cep" type="text" placeholder="CEP (requerido)" formControlName="cep" cep [textMask]="{mask: MASKS.cep.textMask}" [ngClass]="{ 'is-invalid': displayMessage.cep }" />
+                            <input class="form-control" id="cep" type="text" (blur)="buscaCep($event.target.value)" placeholder="CEP (requerido)" formControlName="cep" cep [textMask]="{mask: MASKS.cep.textMask}" [ngClass]="{ 'is-invalid': displayMessage.cep }" />
                             <span class="text-danger" *ngIf="displayMessage.cep">
                             <p [innerHTML]="displayMessage.cep"></p>
                         </span>
