--- a/src/app/fornecedor/editar/editar.component.html
+++ b/src/app/fornecedor/editar/editar.component.html
@@ -27,15 +27,16 @@
                 </div>
 
                 <div class="form-group">
-                    <label class="control-label">Documento</label>
-                    <div>
-                        <input class="form-control" id="documento" type="text" placeholder="requerido" [ngClass]="{'is-invalid': displayMessage.documento }" />
+                  <label class="control-label">Documento</label>
+                  <div>
+                      <input class="form-control" id="documento" type="text" placeholder="{{ textoDocumento }}" formControlName="documento" [textMask]="tipoFornecedorForm().value === '1' ? {mask: MASKS.cpf.textMask} : {mask: MASKS.cnpj.textMask}" [ngClass]="{'is-invalid': displayMessage.documento }"
+                      />
 
-                        <span class="text-danger" *ngIf="displayMessage.documento">
-                            <p [innerHTML]="displayMessage.documento"></p>
-                        </span>
-                    </div>
-                </div>
+                      <span class="text-danger" *ngIf="displayMessage.documento">
+                          <p [innerHTML]="displayMessage.documento"></p>
+                      </span>
+                  </div>
+              </div>
 
             </div>
 
