--- a/src/app/fornecedor/detalhes/detalhes.component.html
+++ b/src/app/fornecedor/detalhes/detalhes.component.html
@@ -15,7 +15,7 @@
                 <label class="control-label">Documento</label>
         </dt>
             <dd class="col-sm-10">
-                {{ fornecedor.documento }}
+                {{ fornecedor.tipoFornecedor === 1 ? (fornecedor.documento | cpf) : (fornecedor.documento | cnpj) }}
             </dd>
             <dt class="col-sm-2">
                 <label class="control-label">Ativo</label>
@@ -25,6 +25,11 @@
             </dd>
         </dl>
     </div>
+
+    <div class="row">
+      <br>
+      <iframe width="100%" height="450" frameborder="0" style="border:0; padding-bottom: 50px;" [src]="enderecoMap" allowfullscreen></iframe>
+  </div>
 
     <div>
         <a class="btn btn-dark" [routerLink]="['/fornecedores/editar',fornecedor.id]">Editar</a>&nbsp;
