--- a/src/app/produto/excluir/excluir.component.html
+++ b/src/app/produto/excluir/excluir.component.html
@@ -31,7 +31,7 @@
                     Valor
                 </dt>
                 <dd>
-                    {{ produto.valor | currencyBrazil }}
+                    {{ produto.valor | currency }}
                 </dd>
                 <dt>
                     DataCadastro
