--- a/src/app/produto/lista/lista.component.html
+++ b/src/app/produto/lista/lista.component.html
@@ -40,7 +40,7 @@
                     {{ produto.nomeFornecedor }}
                 </td>
                 <td>
-                    {{ produto.valor | currencyBrazil }}
+                    {{ produto.valor | currency }}
                 </td>
                 <td>
                     <input [checked]="produto.ativo" class="check-box" disabled="disabled" type="checkbox">
