--- a/src/app/produto/novo/novo.component.html
+++ b/src/app/produto/novo/novo.component.html
@@ -78,6 +78,7 @@
           <div class="custom-file">
             <input
               type="file"
+              accept="image/jpeg,image/png"
               class="custom-file-input"
               id="imagem"
               formControlName="imagem"
