teste com selenium

--- a/src/app/produto/novo/novo.component.html
+++ b/src/app/produto/novo/novo.component.html
@@ -167,6 +167,7 @@
             [disabled]="!produtoForm.valid"
             value="Cadastrar"
             class="btn btn-primary"
+            id="cadastroProduto"
           />&nbsp;
           <a class="btn btn-info" href="/produtos/listar-todos">Voltar</a>
         </div>
